src/Components/ProductPopup.css
.ub-max-h_1duvey0 {
    max-height: 6000px !important;
    min-height: 200px;
    padding-bottom: 20px;
    overflow-y: hidden;
}

.ub-algn-itms_flex-start {
    overflow-y: scroll;
}
.shopLink {
    margin-top: 20px;
    background-color: rgb(71, 170, 71);
    color: white;
    text-align: center;
    transition: background-color 0.2s ease-in-out;
}
.shopLink:hover {
    background-color: rgb(55, 139, 55) !important;
}

.ProductPageSection {
    padding: 15px;
    display: flex;
    justify-content: center;
    flex-direction: column;
    text-align: center;
    align-items: center;
}

.ProductPageBrandImg {
    max-width: 300px;
    width: 100%;
    min-width: 150px;
}
.Table {
    width: 100%;
    margin: 0;
    padding: 0;
    text-align: center;
}

.SubBrandName {
    font-size: 30px;
    font-weight: bold;
    color: rgb(30, 75, 30);
    margin-bottom: 30px;
    line-height: 30px;
    margin-top: -15px;
}
.ProductName {
    font-size: 42px;
    line-height: 42px;
    font-weight: bold;
    color:rgb(49, 141, 49);
}
.ProductNameTranslation {
    font-size: 33px;
    font-weight: bold;
    color:rgb(49, 141, 49);
    line-height: 33px;
    margin-top: -20px;
}


.Desc {
    margin-top: 30px;
    font-size: 18px;
}

.ProductImage {
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
    background-size: 340px 380px;

    transition: border-color 0.2s ease-in-out;
}
.ProductImage:hover {
    border-color: rgb(101, 197, 101);
    cursor: pointer;
}

.ProductMainImage {
    max-width: 500px;
    width: 100%;
    min-width: 300px;
}

